# family-photos

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  mermaid.mmd  pyproject.toml  smoke_test.py
config/: settings.py  urls.py
photos/: decorators.py  forms.py  models.py  urls.py  views.py
photos/migrations/: 0001_initial.py
photos/templates/photos/: base.html  gallery.html  login.html  name_tag.html
static/css/: style.css
staticfiles/js/: gallery.js  upload.js
